# PerformanceMarketExpert

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
adpulse/: __init__.py  cli.py  config.py  database.py  models.py  schemas.py
adpulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
adpulse/ai/: __init__.py  anomaly.py  insights_service.py  openai_client.py
adpulse/api/: __init__.py  dependencies.py  main.py  utils.py
adpulse/api/routers/: __init__.py  campaigns.py  health.py  insights.py  reports.py  summary.py  timeseries.py
adpulse/connectors/: __init__.py  base.py  google_ads.py  meta_ads.py  registry.py  tiktok_ads.py
adpulse/dashboard/: __init__.py  api_client.py  app.py  utils.py
adpulse/ingestion/: __init__.py  data_ingestor.py  schema.py
adpulse/reporting/: __init__.py  email_stub.py  pdf_generator.py  report_service.py
adpulse/storage/: database.py
adpulse/utils/: __init__.py  identifiers.py
data/: adpulse.db
sample_data/: google_ads_sample.csv  meta_ads_sample.csv  tiktok_ads_sample.csv
sample_data/synthetic/: google_ads_synth.csv  meta_ads_synth.csv  tiktok_ads_synth.csv
scripts/: generate_synthetic_data.py
tests/: test_api_summary.py  test_connectors.py
