[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adpulse"
version = "0.1.0"
description = "Module 1 data ingestion layer for AdPulse"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Performance Market Expert"}
]
dependencies = [
  "typer>=0.12,<0.13",
  "tabulate>=0.9,<0.10"
]

[project.scripts]
adpulse = "adpulse.cli:app"

[tool.setuptools.packages.find]
include = ["adpulse*"]
